added given so far routes
